--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint --ext .js,.vue src test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "vue": "^2.4.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
